--- a/MERN_Project/cs411_project/src/App.css
+++ b/MERN_Project/cs411_project/src/App.css
@@ -17,6 +17,56 @@
     padding: 20px;
   }
   
+  .form-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 20px;
+  }
+  
+  .form-container form {
+    display: flex;
+    align-items: center;
+  }
+  
+  .search-container {
+    display: flex;
+  }
+  
+  .search-container input {
+    padding: 6px 12px;
+    margin-right: 4px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    font-size: 14px;
+  }
+  
+  .search-container button {
+    padding: 6px 12px;
+    border-radius: 4px;
+    border: none;
+    background-color: #007bff;
+    color: #fff;
+    font-size: 14px;
+  }
+  
+  .form-container button {
+    padding: 6px 12px;
+    border-radius: 4px;
+    border: none;
+    background-color: #ffc107;
+    color: #1b1e21;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    transition-duration: 0.4s;
+  }
+  
+  .form-container button:hover {
+    background-color: #d39e00;
+    color: #ffffff;
+  }
+  
   /* Header and Navigation */
   header {
     background-color: #343a40;
@@ -43,6 +93,17 @@
   nav ul li a:hover {
     color: #ffc107;
   }
+
+  .search-container input {
+    width: 400px;
+    height: 40px;
+    font-size: 16px;
+    padding: 8px;
+    border: none;
+    border-radius: 4px;
+    margin-right: 8px;
+  }
+  
   
   /* Profile Section */
   .profile-container {
@@ -66,7 +127,7 @@
   .main-content {
     margin-top: 20px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(2, 1fr);
     gap: 20px;
   }
   
@@ -102,7 +163,7 @@
   }
   
   /* Button Styles */
-  button {
+button {
     background-color: #ffc107;
     border: none;
     color: #1b1e21;
@@ -120,5 +181,35 @@
   button:hover {
     background-color: #d39e00;
     color: #ffffff;
+  }
+  
+  iframe {
+    width: 100%;
+    height: 315px;
+  }
+  
+  /* Add the following styles for responsive design */
+  
+  @media (max-width: 767px) {
+    .card {
+      width: 100%;
+    }
+  
+    .main-content {
+      grid-template-columns: repeat(1, 1fr);
+    }
+  
+    .form-container {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  
+    .form-container form {
+      margin-bottom: 10px;
+    }
+  
+    .search-container {
+      margin-top: 10px;
+    }
   }
   
